feat: ordem navbar e botao form cliente

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="utf-8" />
@@ -10,7 +10,7 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="sistema gerenciamento de contratos"
+  <meta name="client success app"
     content="Sistema para gerenciamento de contratos focado no sucesso do cliente." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>SGC</title>
