feat: Nome ajustado navegador

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <meta name="client success app"
     content="Sistema para gerenciamento de contratos focado no sucesso do cliente." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>SGC</title>
+  <title>CSApp</title>
 </head>
 
 <body>
