feat: atualizar caminho do ícone no index.html e manifest.json

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <meta name="client success app"
     content="Sistema para gerenciamento de contratos focado no sucesso do cliente." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
   <title>CSApp</title>
 </head>
 
